# FelineOS

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  arch-machine.sh  arch-opts.sh  bochsrc.txt  build.sh  clean.sh  config.sh  default-host.sh  docs.sh  gen_compile_commands.sh  grub.cfg  headers.sh  iso.sh  minicom.sh  qemu.sh  run-rpi.sh  shell.nix
.github/workflows/: ARM-Build.yml  NixBuild.yml  libFeline-Test.yml
cmake-toolchains/: arm-none-eabi.cmake  i686-elf.cmake
docs/: Architecture.md
docs/latex/: main.tex
kernel/: Makefile
kernel/arch/i386/: arch.c  arch.cpp  linker.ld  make.config  vga.h
kernel/arch/i386/boot/: boot.S  boot.s  cpuid.c  crtn.S  make.config
kernel/arch/i386/gdt/: gdt.c  gdt.h  make.config  set_gdt.s
kernel/arch/i386/interrupts/: idt.c  idt.h  isr.s  make.config
kernel/arch/i386/mem/: make.config  mem.h  phys_mem.c
kernel/arch/i386/screen/: make.config  tty.c  vga.h
kernel/drivers/: make.config
kernel/drivers/include/drivers/: serial.h
kernel/drivers/serial/: make.config  serial.c
kernel/include/kernel/: arch.h  asm.h  cpuid.h  idt.h  log.h  mem.h  multiboot.h  tty.h
kernel/kernel/: cpuid.c  kernel.c  kernel.cpp  log.c
libc/: Makefile
libc/arch/i386/: make.config
libc/ctype/: isdigit.c
libc/include/: ctype.h  stdio.h  stdlib.h  string.h
libc/include/c++/: cctype  cstdlib
libc/include/sys/: cdefs.h
libc/ssp/: ssp.c
libc/stdio/: printf.c  putchar.c  puts.c
libc/stdlib/: abort.c  abs.c
libc/string/: itostr.c  memcmp.c  memcpy.c  memset.c  strcat.c  strcpy.c  strlen.c
nix-patches/: gcc.patch  newlib-fix-gloss.patch
system/kernel/: .gitignore  CMakeLists.txt  Makefile
system/kernel/arch/arm/: arch.cpp  linker.ldpp  make.config
system/kernel/arch/arm/boot/: boot.S  cpuid.cpp  crti.S  crti.cpp  crtn.S  crtn.cpp  make.config
system/kernel/arch/arm/devicetree/: devicetree.cpp  make.config
system/kernel/arch/arm/interrupts/: handle_abort.cpp  idt.S  idt.cpp  idt.h  irq.cpp  isr.S  make.config
system/kernel/arch/arm/mem/: make.config  mem.h  phys_mem.cpp
system/kernel/arch/arm/stack/: make.config  walk_stack.S
system/kernel/arch/arm/task/: task.S
system/kernel/arch/arm/virt_mem/: enable_paging.S  make.config  paging.cpp
system/kernel/arch/i386/: arch.cpp  linker.ldpp  make.config
system/kernel/arch/i386/boot/: boot.S  boot.s  cpuid.cpp  crti.S  crtn.S  make.config
system/kernel/arch/i386/gdt/: gdt.c  gdt.cpp  gdt.h  make.config  set_gdt.S  set_gdt.s
system/kernel/arch/i386/interrupts/: idt.c  idt.cpp  idt.h  isr.S  isr.s
system/kernel/arch/i386/io/: io.S  io.cpp  make.config
system/kernel/arch/i386/mem/: make.config  mem.h  phys_mem.c  phys_mem.cpp
system/kernel/arch/i386/stack/: make.config  (+1 more)
system/kernel/drivers/: make.config
system/kernel/drivers/PIT/: pit.cpp
system/kernel/drivers/framebuffer/: framebuffer.cpp  make.config
system/kernel/drivers/pl011/: make.config  pl011.cpp
system/kernel/drivers/serial/: make.config  serial.cpp
system/kernel/drivers/systimer/: systimer.cpp
system/kernel/drivers/uart/: make.config  uart.cpp
system/kernel/drivers/vga/: vga.cpp
system/kernel/include/kernel/: arch.h  asm.h  asm_compat.h  backtrace.h  cpuid.h  devicetree.h  halt.h  interrupts.h  io.h  kstdallocator.h  log.h  mem.h  misc.h  modules.h  multiboot.h  paging.h  phys_addr.h  phys_mem.h  scheduler.h  settings.h  task.h  user_ptr.h  vtopmem.h
system/kernel/kernel/: backtrace.cpp  cpp.cpp  enable_paging.S  enable_paging.s  kernel.cpp  log.c  log.cpp  make.config  mem.cpp  page.cpp  paging.cpp  phys_mem.cpp  scheduler.cpp  settings.cpp  syscall.cpp  task.cpp  walk_stack.S  walk_stack.s
system/libFeline/: .gitignore  CMakeLists.txt  Makefile
system/libFeline/arch/i386/: make.config
system/libFeline/include/feline/: align.h  bool_int.h  cpp_only.h  endian.h  fixed_width.h  kallocator.h  kernel_exceptions.h  kstring.h  kvector.h  logger.h  minmax.h  nonzero.h  ranges.h  reverse_endian.h  rounding.h  settings.h  shortcuts.h  spinlock.h  str.h  tests.h
system/libFeline/include/feline/asm/: string.inc
system/libFeline/include/feline/c++/feline/: fixed_width.h  spinlock.h
system/libFeline/src/allocator/: kallocator.cpp
system/libFeline/src/kstring/: kstring.cpp
system/libFeline/src/locking/: spinlock.cpp
system/libFeline/src/logging/: logger.cpp
system/libFeline/src/settings/: settings.cpp
system/libFeline/src/string/: itostr.cpp
system/libFeline/src/vector/: kvector.cpp
system/libFeline/tests/: align.cpp  bool_int.cpp  endian.cpp  fixed_width.cpp  kvector.cpp  nonzero.cpp  ranges.cpp
system/libc/: CMakeLists.txt  Makefile
system/libc/arch/arm/: make.config
system/libc/arch/i386/: make.config
system/libc/assert/: assert.cpp
system/libc/ctype/: iscntrl.c  iscntrl.cpp  isdigit.c  isdigit.cpp  isprint.cpp  isspace.cpp
system/libc/errno/: errno.cpp
system/libc/fcntl/: close.cpp  open.cpp
system/libc/icxxabi/: icxxabi.cpp
system/libc/include/: assert.h  ctype.h  errno.h  fcntl.h  inttypes.h  stdio.h  stdlib.h  string.h  unistd.h
system/libc/include/bits/: byte.h  c_compat.h  io.h  pid_t.h  ssize_t.h  va_list.h
system/libc/include/c++/: atomic  cassert  cctype  cerrno  cinttypes  climits  cstdarg  cstdbool  cstddef  cstdint  cstdio  cstdlib  cstring  icxxabi.h  limits
system/libc/include/sys/: cdefs.h  syscall.h  types.h
system/libc/ssp/: ssp.c  ssp.cpp
system/libc/stdio/: io_common.cpp  printf.c  printf.cpp  putchar.cpp  puts.cpp
system/libc/stdlib/: abort.c  abort.cpp  abs.cpp  malloc_free.cpp  strto.cpp
system/libc/string/: itostr.c  memcmp.cpp  memcpy.cpp  memmove.c  memmove.cpp  memset.cpp  strcat.c  strcat.cpp  strcmp.cpp  strcpy.cpp  strlen.cpp  strnlen.cpp  strstr.cpp
system/libc/unistd/: read.cpp  write.cpp
system/terminals/: CMakeLists.txt  Makefile
system/terminals/common/: terminal.cpp
system/terminals/include/terminals/: terminal.h
system/terminals/vga/: vga_text.cpp
utils/: gdt_create.c  gdt_create.cpp  sizes.c  sizes.cpp  sizes_freestanding.c  sizes_freestanding.cpp
(+18 files in other folders)
